--- a/recipes/tuna_pasta.html
+++ b/recipes/tuna_pasta.html
@@ -24,7 +24,7 @@
                 <li>tomato sauce/diced tomato, 2 small or 1 large can</li>
                 <li>cheese: parmesan and/or mozarella</li>
                 <li>optional veggies: diced zucchini, eggplant, peppers, spinach, kale</li>
-                <li>optional: cream, lemon, chili</li>
+                <li>optional: cream, lemon, chili flakes</li>
                 <li>salt</li>
             </ul>
         <h2>Steps</h2>
@@ -37,7 +37,7 @@
                 <li>Add optional veggies, stir until softened.</li>
                 <li>Add tomato paste, cook until darkened. Add canned tomatoes.</li>
                 <li>Drain tuna, add to onions and garlic.</li>
-                <li>Season, add (optional) lemon and zest to taste, black pepper, (optional) chili peppers. This would be the time to add cream, if desired.</li>
+                <li>Season, add (optional) lemon and zest to taste, black pepper, (optional) chili flakes. This would be the time to add cream, if desired.</li>
                 <li>Add noodles, stir, pour into pyrex.</li>
                 <li>Add cheeses on top, bake until melted and bubbly. (20-30 minutes. Cover if the cheese is browning too much.)</li>
                 <li>Let sit for ten minutes before serving. Sprinkle parsley.</li>
