Add CSS styles, top nav bar, back to top button

--- a/index.html
+++ b/index.html
@@ -2,18 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        
+        <link rel="stylesheet" href="style.css">
     </head>
 
-
     <body>
-        <h1>Odin Recipes</h1>
-        <ol>
-            <li><a href="recipes/weeknight_tacos.html">Weeknight Tacos</a></li>
-            <li><a href="recipes/chicken_thighs.html">Baked Chicken Thighs</a></li>
-            <li><a href="recipes/lettuce_wraps.html">Lettuce Wraps</a></li>
-            <li><a href="recipes/tuna_pasta.html">Tuna Pasta</a></li>
-        </ol>
-        
+
+        <!--Top nav bar--> 
+        <div class="topnav">
+            <a class="active" href="/index.html#home">Home</a>
+            <a href="/about.html#about">About</a>
+            <a href="/contact.html#contact">Contact</a>
+            <a href="/recipes.html#recipes">Recipes</a>
+            <form>
+                <input type="text" placeholder="Search..">
+            </form>
+            </div>
+
+        <h1>There will be something clever here at some point!</h1>
+
+        <!--Adds "Back to the top" button-->
+        <form>
+            <input 
+                class="bottom-button"
+                type="BUTTON" 
+                value="back to the top" 
+                onclick="window.location.href='#top'">
+        </form>
     </body>
 </html>
