--- a/recipes/lettuce_wraps.html
+++ b/recipes/lettuce_wraps.html
@@ -2,12 +2,23 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        
+        <link rel="stylesheet" href="recipe.css">
     </head>
 
 
     <body>
-        <h1>Chicken Thighs</h1>
+
+        <!--Top nav bar--> 
+        <div class="topnav">
+            <a href="/index.html#home">Home</a>
+            <a href="/about.html#about">About</a>
+            <a href="/contact.html#contact">Contact</a>
+            <a href="/recipes.html#recipes">Recipes</a>
+            <input type="text" placeholder="Search..">
+          </div>
+
+        <!--Photo and recipe-->
+        <h1>Lettuce Wraps</h1>
         <img src="../images/lettuce-wraps.jpg"
             width="500"
             alt="lettuce wraps">
@@ -35,5 +46,14 @@
                 <li>Spices such as coriander seed and cardamom need to be toasted in a dry pan first.</li>
                 <li>Cornstarch slurry: In a small bowl, moisten about a tablespoon of cornstarch with two tablespoons of COLD water. Stir. Add slowly to whatever you are trying to thicken; it will thicken when the liquid reaches boiling temperature.</li>
             </ul>
+
+        <!--Adds "Back to the top" button-->
+        <form>
+            <input 
+                class="bottom-button"
+                type="BUTTON" 
+                value="back to the top" 
+                onclick="window.location.href='#top'">
+        </form>
     </body>
 </html>
